--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>WebHacks_1.0</title>
 </head>
 <body>
-    <div class="top">
-        <label class="logo">SteveRobinson</label>
-        <button class="top-left"><img src="assets/menu_white_24dp.svg" alt="nothing"></button>
+    <div class="cont1">
+        <label class="logo">Steve<strong>Robinson</strong></label>
+        <button class="menu btn"><img src="assets/menu_white_24dp.svg" alt="nothing"></button>
+        <p class="po1">Online free courses with <strong>Steve Robinson</strong></p>
+        <div class="po">
+        <p class="po2">earn digital marketing skills <div class="po21"><strong>to boostup your business.</strong></div></p>
+        </div>
+        <button class="btn dis">discover courses ↓</button>
     </div>
 </body>
 </html>
