--- a/index.html
+++ b/index.html
@@ -5,17 +5,222 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="slide.css">
     <title>WebHacks_1.0</title>
 </head>
 <body>
-    <div class="cont1">
-        <label class="logo">Steve<strong>Robinson</strong></label>
-        <button class="menu btn"><img src="assets/menu_white_24dp.svg" alt="nothing"></button>
+    <div class="cont-1">
+    <div class="cont1 grid">
+        <label class="logo">Steve<strong>Robinson.</strong></label>
+        <button class="menu btn" id="menu"><img class="m1" src="assets/menu.png" alt="nothing"><img class="m2" src="assets/menu hover.png" alt="nothing"></button>
         <p class="po1">Online free courses with <strong>Steve Robinson</strong></p>
         <div class="po">
         <p class="po2">earn digital marketing skills <div class="po21"><strong>to boostup your business.</strong></div></p>
         </div>
-        <button class="btn dis">discover courses ↓</button>
+        <button class="btn dis">DISCOVER COURSES ↓</button>
+        <div class="bg-modal">
+            <div class="modal-contents">
+                <div class="close"><p>+</p></div>
+                <h1>THE COURSES</h1>
+                <p>How To Make Your Social Media Content Go Viral</p>
+                <p>How To Build A Successful Email Newsletter</p>
+                <p>How To Use Online Reviews To Boost Your Business</p>
+                <p>Best Practices For Linkedin Features Used For Social Recruiting</p>
+                <p>How To Build A Social Media Crisis Management Strategy</p>
+                <p>How To Launch A Successful Online Community</p>
+                <div class="pop-foot">
+                    <div class="nav">
+                        <p>Home</p>
+                        <p>About</p>
+                        <p>Contact</p>
+                    </div>
+                    <div class="social">
+                        <img src="assets/fa.png" alt="nothing">
+                        <img src="assets/twi.png" alt="nothing">
+                        <img src="assets/li.png" alt="nothing">
+                        <img src="assets/in.png" alt="nothing">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    </div>
+    <div class="cont2">
+        <div class="course c-p1">
+            <div class="course-card">
+                <h1>HOW TO MAKE YOUR SOCIAL MEDIA CONTENT GO VIRAL</h1>
+                <div class="course-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit aulla sit amet magna sodales, interdum tortor etlert of dictum mauris loean ultricies lectus quis gravida urna interdum quam bibend</p>
+                </div>
+                <div class="hov">
+                    <p>5 lessons-4:11 hours</p><br>
+                    <button class="btn vc">VIEW COURSE</button>
+                </div>
+            </div>
+        </div>
+        <div class="course c-p2">
+            <div class="course-card">
+                <h1>HOW TO BUILD A SUCCESSFUL EMAIL NEWSLETTER</h1>
+                <div class="course-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit aulla sit amet magna sodales, interdum tortor etlert of dictum mauris loean ultricies lectus quis gravida urna interdum quam bibend</p>
+                </div>
+                <div class="hov">
+                    <p>5 lessons-4:11 hours</p><br>
+                    <button class="btn vc">VIEW COURSE</button>
+                </div>
+            </div>
+        </div>
+        <div class="course c-p3">
+            <div class="course-card">
+                <h1>HOW TO USE ONLINE REVIEWS TO BOOST YOUR BUSINESS</h1>
+                <div class="course-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit aulla sit amet magna sodales, interdum tortor etlert of dictum mauris loean ultricies lectus quis gravida urna interdum quam bibend</p>
+                </div>
+                <div class="hov">
+                    <p>5 lessons-4:11 hours</p><br>
+                    <button class="btn vc">VIEW COURSE</button>
+                </div>
+            </div>
+        </div>
+        <div class="course c-p4">
+            <div class="course-card">
+                <h1>BEST PRACTICES FOR LINKEDIN FEATURES USED FOR SOCIAL RECRUITING</h1>
+                <div class="course-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit aulla sit amet magna sodales, interdum tortor etlert of dictum mauris loean ultricies lectus quis gravida urna interdum quam bibend</p>
+                </div>
+                <div class="hov">
+                    <p>5 lessons-4:11 hours</p><br>
+                    <button class="btn vc">VIEW COURSE</button>
+                </div>
+            </div>
+        </div>
+        <div class="course c-p5">
+            <div class="course-card">
+                <h1>HOW TO BUILD A SOCIAL MEDIA CRISIS MANAGEMENT STRATEGY</h1>
+                <div class="course-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit aulla sit amet magna sodales, interdum tortor etlert of dictum mauris loean ultricies lectus quis gravida urna interdum quam bibend</p>
+                </div>
+                <div class="hov">
+                    <p>5 lessons-4:11 hours</p><br>
+                    <button class="btn vc">VIEW COURSE</button>
+                </div>
+            </div>
+        </div>
+        <div class="course c-p6">
+            <div class="course-card">
+                <h1>HOW TO LAUNCH A SUCCESSFUL ONLINE COMMUNITY</h1>
+                <div class="course-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit aulla sit amet magna sodales, interdum tortor etlert of dictum mauris loean ultricies lectus quis gravida urna interdum quam bibend</p>
+                </div>
+                <div class="hov">
+                    <p>5 lessons-4:11 hours</p><br>
+                    <button class="btn vc">VIEW COURSE</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="t-3">
+        <div class="three">
+            <img src="assets/Steve-Robinson-Pic.png" alt="nothing">
+            <div class="content-3">
+                <p>Hey!</p>
+                <strong>I AM STEVE ROBINSON.</strong>
+                <p>With 18 years of digital marketing and customer experience expertise, I helped build and grow over 250 companies. In the constantly changing field of digital marketing, <strong>it is my mission to provide individuals and small businesses with the skills</strong> to master the critical tactics and strategies that will drive their business growth.</p>
+                <button class="btn AM">MORE ABOUT ME  →</button>
+            </div>
+        </div>
+    </div>
+    <div class="four flex">
+        <div class="cont-4">
+        <p class="p-4">Why <strong>My Courses</strong></p>
+        <p class="po1">GROW YOUR KNOWLEDGE AND <strong>STAY AHEAD OF YOUR COMPETITORS</strong></p>
+        </div>
+        <div class="container">
+            <div class="cards">
+                <div class="card1">
+                    <img src="assets/icons8-credit-card-64.png" alt="nothing">
+                    <h1>100% FREE OF CHARGE</h1>
+                    <p>Lorem ipsum dolor sit amet conetur adipiing elit. aulla sit amet magna is fodal otes alora.</p>
+                </div>
+                <div class="card1">
+                    <img src="assets/icons8-knowledge-sharing-64.png" alt="nothing">
+                    <h1>TRUSTED KNOWLEDGE</h1>
+                    <p>Lorem ipsum dolor sit amet conetur adipiing elit. aulla sit amet magna is fodal otes alora.</p>
+                </div>
+                <div class="card1">
+                    <img src="assets/icons8-laptop-64.png" alt="nothing">
+                    <h1>ANYTIME, ANYWHERE</h1>
+                    <p>Lorem ipsum dolor sit amet conetur adipiing elit. aulla sit amet magna is fodal otes alora.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="four flex flex-c">
+        <div class="cont-4">
+            <p class="p-4">Some <strong>Feedbacks</strong></p>
+            <p class="po1">WHAT PEOPLE <strong>ARE SAYING</strong></p>
+        </div>
+        <div class="slides">
+            <div class="slide active">
+                <p class="co">"Steve makes some of the best educational digital marketing content on the internet! His teaching style is approachable and thorough and I've learned a lot from him over the years."</p>
+                <div class="info">
+                    <img src="assets/Tim-Hampton.png" alt="nothing">
+                    <div class="det"><h1>Tim Hampton</h1>
+                    <p>Rome</p></div>
+                </div>
+            </div>
+            <div class="slide">
+                <p class="co">"Working with Steve has been a fantastic experience. He was committed to helping us accomplish our goals. We saw an immediate 10-15% increase in leads."</p>
+                <div class="info">
+                    <img src="assets/Jake-Romero-.png" alt="nothing">
+                    <div class="det"><h1>JAKE ROMERO</h1>
+                    <p>Sao Paulo</p></div>
+                </div>
+            </div>
+            <div class="slide">
+                <p class="co">"Steve is smart, charismatic and insightful! He has a lot of experience and shares his knowledge freely."</p>
+                <div class="info">
+                    <img src="assets/Carla-Wade.png" alt="nothing">
+                    <div class="det"><h1>CARLA WADE</h1>
+                    <p>New york</p></div>
+                </div>
+            </div>
+            <div class="slide">
+                <p class="co">"Steve makes some of the best educational digital marketing content on the internet! His teaching style is approachable and thorough and I've learned a lot from him over the years."</p>
+                <div class="info">
+                    <img src="assets/Woman.jpg" alt="nothing">
+                    <div class="det"><h1>Lagertha</h1>
+                    <p>Kattegat</p></div>
+                </div>
+            </div>
+            <div class="navigation">
+                <div class="btn1 active"></div>
+                <div class="btn1"></div>
+                <div class="btn1"></div>
+                <div class="btn1"></div>
+              </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="left">
+            <label class="logo">Steve<strong>Robinson.</strong></label>
+            <div class="social"><img src="assets/fb-foot.svg" alt="nothing">
+            <img src="assets/5305170-24.png" alt="nothing">
+            <img src="assets/insta.png" alt="nothing">
+            <img src="assets/link.png" alt="nothing">
+            </div>
+            <p>© 2020 Steven Robinson Online Courses LTD. All Rights Reserved</p>
+        </div>
+        <div class="right">
+            <p>Get Free Lessons, Bonus Content And Notifications Of Upcoming Courses Straight To Your Index</p>
+            <div class="hw">
+            <div class="email"><p>Your Email</p>
+            <input type="text"></div>
+            <button class="btn dis">SUBSCRIBE ↓</button>
+            </div>
+        </div>
+        
+    </div>
+    <script src="slides.js"></script>
 </body>
 </html>
